<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".MainActivity">

    <View
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:radius="5dp"
        android:background="@drawable/v_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_formula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/tx_formula"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.2" />

    <Spinner
        android:id="@+id/tv_tipo"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:text="@string/tx_tipo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/tv_formula"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/img_formula"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/f_voltaje" />

    <View
        android:id="@+id/vw_valores"
        android:layout_width="296dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_formula"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/v_radius"
        android:text="@string/btn_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_valores"
        app:layout_constraintVertical_bias="2" />

    <TextView
        android:id="@+id/tv_val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_corriente"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/vw_valores"
        app:layout_constraintEnd_toEndOf="@+id/vw_valores"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/vw_valores"
        app:layout_constraintTop_toTopOf="@+id/vw_valores"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_resistencia"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/vw_valores"
        app:layout_constraintEnd_toEndOf="@+id/vw_valores"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/vw_valores"
        app:layout_constraintTop_toTopOf="@+id/vw_valores"
        app:layout_constraintVertical_bias="0.75" />

    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="154dp"
        android:layout_height="43dp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="67dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="163dp"
        android:layout_height="21dp"
        android:hint="hint"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="467dp" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>