<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".ResultadoActivity">

    <View
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:radius="5dp"
        android:background="@drawable/v_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_header_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/tx_header_resultado"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:text="@string/tx_resultado"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_resultado"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:layout_marginBottom="250dp"
        android:padding="20dp"
        android:background="@drawable/v_radius"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="154dp"
        android:layout_height="43dp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="67dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="163dp"
        android:layout_height="21dp"
        android:hint="hint"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="467dp" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>